description of konane

--- a/writeup/main.bib
+++ b/writeup/main.bib
@@ -187,3 +187,12 @@
   abstract = {The game of checkers has roughly 500 billion billion possible positions (5 {\texttimes} 1020). The task of solving the game, determining the final result in a game with no mistakes made by either player, is daunting. Since 1989, almost continuously, dozens of computers have been working on solving checkers, applying state-of-the-art artificial intelligence techniques to the proving process. This paper announces that checkers is now solved: Perfect play by both sides leads to a draw. This is the most challenging popular game to be solved to date, roughly one million times as complex as Connect Four. Artificial intelligence technology has been used to generate strong heuristic-based game-playing programs, such as Deep Blue for chess. Solving a game takes this to the next level by replacing the heuristics with perfection.},
   file = {/home/ian/Zotero/storage/PCP2CV6S/Schaeffer et al. - 2007 - Checkers Is Solved.pdf}
 }
+
+@inproceedings{thompsonTeachingNeuralNetwork2005,
+  title = {Teaching a {{Neural Network}} to {{Play Konane}}},
+  author = {Thompson, D.},
+  year = {2005},
+  urldate = {2024-11-26},
+  abstract = {A common approach to game playing in Artificial Intelligence involves the use of the Minimax algorithm and a static evaluation function. In this work I investigated using neural networks to replace hand-tuned static evaluation functions. Networks were also trained to evaluate board positions to greater depth levels using Minimax. The networks begin as a random networks and by playing against a random player, the networks are able to match the teacher's performance. This work provides evidence that board representation affects the ability of the network to evaluate Konane board positions. Networks that are taught to output a real-value board evaluation outperform those taught to directly compare two boards after a considerable amount of training. However, the latter networks show more consistent behavior during training, and quickly learn to play at a reasonably good skill level.},
+  file = {/home/ian/Zotero/storage/2KGJZCKJ/Thompson - 2005 - Teaching a Neural Network to Play Konane.pdf}
+}
