update stairs nb

--- a/notebooks/explore-stairs.ipynb
+++ b/notebooks/explore-stairs.ipynb
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +562,7 @@
        "'*'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,6 +580,36 @@
     "display(g)\n",
     "\n",
     "g.canonical_form()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'-4'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from konane import Konane1024, Konane64\n",
+    "\n",
+    "g =Konane64(\"\"\"\n",
+    "          x_x_o_\n",
+    "          oxoxox\n",
+    "          x_x_xx\n",
+    "          o_ooox\n",
+    "          xoxoxo\n",
+    "          o_ooox\n",
+    "\"\"\")\n",
+    "g.canonical_form()    "
    ]
   }
  ],
