--- a/writeup/main.bib
+++ b/writeup/main.bib
@@ -196,3 +196,15 @@
   abstract = {A common approach to game playing in Artificial Intelligence involves the use of the Minimax algorithm and a static evaluation function. In this work I investigated using neural networks to replace hand-tuned static evaluation functions. Networks were also trained to evaluate board positions to greater depth levels using Minimax. The networks begin as a random networks and by playing against a random player, the networks are able to match the teacher's performance. This work provides evidence that board representation affects the ability of the network to evaluate Konane board positions. Networks that are taught to output a real-value board evaluation outperform those taught to directly compare two boards after a considerable amount of training. However, the latter networks show more consistent behavior during training, and quickly learn to play at a reasonably good skill level.},
   file = {/home/ian/Zotero/storage/2KGJZCKJ/Thompson - 2005 - Teaching a Neural Network to Play Konane.pdf}
 }
+
+@article{zaechLeadershipStartups2017,
+  title = {Leadership in Start-Ups},
+  author = {Zaech, Simon and Baldegger, Urs},
+  year = {2017},
+  month = feb,
+  journal = {International Small Business Journal},
+  volume = {35},
+  pages = {026624261667688},
+  doi = {10.1177/0266242616676883},
+  abstract = {This article explores the role of leadership in start-ups and outlines a model of when, why and how leadership behaviour of founder-CEOs influences start-up performance. The model has been tested using a sample of 102 start-ups and their founder-CEOs and includes feedback from 372 employees, rating their leadership behaviour of founder-CEOs. The results indicate that transformational leadership has a significant and positive effect on start-up performance. However, no significant, direct effects on start-up performance were found for transactional leadership or laissez-faire leadership. Furthermore, the size of the start-up has a significant, positive, moderating effect on the relationship between laissez-faire leadership and start-up performance, as well as a significant, positive, moderating effect on the relationship between the transactional leadership dimension, management by exception and start-up performance. Results indicate that for start-ups and their performance, leadership behaviour is as important as their context. Today, leadership is neglected by most entrepreneurs and is not considered a motivation for founding a business. The results show that founders should focus more on leadership behaviour.}
+}
