--- a/writeup/main.bib
+++ b/writeup/main.bib
@@ -123,6 +123,16 @@
   keywords = {05-04,05C45,05C69,Artificial Intelligence,Automated conjecturing,Automated mathematical discovery,Property-relations conjectures}
 }
 
+@misc{maciosowskiCombinatorialGameTheory2024,
+  title = {Combinatorial {{Game Theory Library}} in {{Rust}}},
+  author = {Maciosowski, Tomasz},
+  year = {2024},
+  month = dec,
+  urldate = {2024-12-15},
+  abstract = {Combinatorial Game Theory toolkit},
+  copyright = {AGPL-3.0}
+}
+
 @incollection{nowakowski1xnKonaneSummary2010,
   title = {1xn {{Konane}}: {{A Summary}} of {{Results}}},
   booktitle = {Games of No Chance [2] {{More}} Games of No Chance},
@@ -150,6 +160,25 @@
   isbn = {978-0-521-15563-2},
   langid = {english},
   annotation = {OCLC: 1075890982}
+}
+
+@misc{ProjectJupyter,
+  title = {Project {{Jupyter}}},
+  urldate = {2024-12-15},
+  abstract = {The Jupyter Notebook is a web-based interactive computing platform. The notebook combines live code, equations, narrative text, visualizations, interactive dashboards and other media.},
+  howpublished = {https://jupyter.org},
+  langid = {english},
+  file = {/home/ian/Zotero/storage/5CQLJ8K7/jupyter.org.html}
+}
+
+@misc{RayonrsRayon2024,
+  title = {Rayon-Rs/Rayon},
+  year = {2024},
+  month = dec,
+  urldate = {2024-12-15},
+  abstract = {Rayon: A data parallelism library for Rust},
+  copyright = {Apache-2.0},
+  howpublished = {rayon-rs}
 }
 
 @article{santosKonaneHasInfinite2008,
