fix path; add gh token

--- a/writeup/main.bib
+++ b/writeup/main.bib
@@ -8,7 +8,8 @@
   isbn = {978-1-56881-277-9},
   lccn = {QA269 .A425 2007},
   keywords = {Combinatorial analysis,Game theory,Textbooks},
-  annotation = {OCLC: ocm74941836}
+  annotation = {OCLC: ocm74941836},
+  file = {/home/ian/Zotero/storage/DSV2XW3F/Albert et al. - 2007 - Lessons in play an introduction to combinatorial game theory.pdf}
 }
 
 @article{bradfordAutomatedConjecturingII2020,
